--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,6 +16,8 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+source= ~/.config/hypr/mocha.conf
+
 
 ################
 ### MONITORS ###
@@ -33,7 +35,7 @@ monitor = HDMI-A-1, highres@highrr, auto-right, 1, bitdepth, 8
 
 # Set programs that you use
 $terminal = wezterm
-$fileManager = thunar
+$fileManager = dolphin
 $menu = wofi --show drun
 $lock = hyprlock
 
@@ -47,7 +49,8 @@ $lock = hyprlock
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar & hyprpaper
-
+exec-once = exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = sudo evremap remap ~/.config/evremap/evremap.toml
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -73,8 +76,8 @@ general {
     border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(EBEBEBee) rgba(2e2e2eee) 45deg
-    col.inactive_border = rgba(020202aa)
+    col.active_border = $mauve
+    col.inactive_border = $surface2
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -87,7 +90,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 15
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -95,7 +98,7 @@ decoration {
 
     shadow {
         enabled = true
-        range = 4
+        range = 15
         render_power = 3
         color = rgba(1a1a1aee)
     }
@@ -103,8 +106,8 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 4
+        passes = 2
 
         vibrancy = 0.1696
     }
@@ -194,6 +197,9 @@ input {
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    accel_profile = flat
+    force_no_accel = true
+
 
     touchpad {
         natural_scroll = false
